[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/botton.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Exit.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/arial.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -2.0
margin_right = 1022.0
margin_bottom = 597.0
texture = ExtResource( 1 )
expand = true

[node name="Start" type="Button" parent="TextureRect"]
margin_left = 387.0
margin_top = 359.0
margin_right = 606.0
margin_bottom = 414.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="TextureRect/Start"]
position = Vector2( 108, 27 )
scale = Vector2( 1.875, 1.73529 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureRect/Start"]
margin_left = 69.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="Exit" type="Button" parent="TextureRect"]
margin_left = 387.0
margin_top = 472.0
margin_right = 606.0
margin_bottom = 527.0
text = "Exit"
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="TextureRect/Exit"]
position = Vector2( 108, 27 )
scale = Vector2( 1.875, 1.73529 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureRect/Exit"]
margin_left = 69.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"

[connection signal="mouse_entered" from="TextureRect/Start" to="TextureRect/Start" method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/Start" to="TextureRect/Start" method="_on_Start_mouse_exited"]
[connection signal="pressed" from="TextureRect/Start" to="TextureRect/Start" method="_on_Start_pressed"]
[connection signal="mouse_entered" from="TextureRect/Exit" to="TextureRect/Exit" method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/Exit" to="TextureRect/Exit" method="_on_Start_mouse_exited"]
[connection signal="pressed" from="TextureRect/Exit" to="TextureRect/Exit" method="_on_Start_pressed"]
